apps/staging/odc/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: datacube-ows
  namespace: odc
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    external-dns.alpha.kubernetes.io/hostname: ows-uncached.staging.example.com
spec:
  ingressClassName: nginx
  rules:
    - host: ows-uncached.staging.example.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: datacube-ows
                port:
                  number: 8000
  tls:
    - hosts:
        - ows-uncached.staging.example.com
      secretName: ows-ingress
